--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,28 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.jmasters.android.app.MainActivity">
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/GridLayout1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:columnCount="2"
+            android:rowCount="3"
+            android:orientation="horizontal"
+            android:useDefaultMargins="true"
+            tools:context="com.jmasters.android.app.MainActivity" >
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_columnSpan="2"
+        android:layout_row="1"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
+        android:text=""
+        android:id="@+id/phoneLine" />
+
+    <EditText
+        android:textColor="@android:color/black"
+        android:textSize="15dp"
+        android:layout_columnSpan="2"
+        android:layout_row="2"
+        android:layout_height="wrap_content"
+        android:text=""
         android:id="@+id/textView" />
 
     <Button
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New Button"
-        android:id="@+id/button"
-        android:onClick="myButtonPressed1"
-        android:layout_below="@+id/textView"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="68dp"
+        android:layout_column="0"
+        android:layout_row="0"
+        android:text="Encrypt"
+        android:id="@+id/encryptButton"
+        android:onClick="encryptButtonPressed"
         />
-</RelativeLayout>
+
+    <Button
+        android:layout_height="wrap_content"
+        android:layout_column="1"
+        android:layout_row="0"
+        android:text="Decrypt"
+        android:id="@+id/decryptButton"
+        android:onClick="decryptButtonPressed"
+        />
+</GridLayout>
